[Feature] Complete option buttons for demo

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
         "crypto-js": "4.0.0",
         "ejs": "^2.7.4",
         "express": "4.17.1",
+        "express-session": "1.17.0",
         "jquery": "^3.4.1",
-        "rainbow-node-sdk": "1.67.1",
         "mongodb": "3.5.4",
-        "express-session": "1.17.0"
+        "rainbow-node-sdk": "1.67.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.2"
     }
 }
