--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
         "jquery": "^3.4.1",
         "mongodb": "3.5.4",
         "rainbow-node-sdk": "1.67.1",
-        "rainbow-web-sdk": "1.67.0"
+        "rainbow-web-sdk": "1.67.0",
+        "bcrypt": "^4.0.1",
+        "dotenv": "^8.2.0",
+        "express-validator": "^6.3.1",
+        "http-auth": "^3.2.4",
+        "mongoose": "^5.9.4",
+        "pug": "^2.0.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
