--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
     "name": "esc-rainbow-alpha",
     "main": "app.js",
     "dependencies": {
-        "bcrypt": "^4.0.1",
-        "body-parser": "^1.19.0",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-validator": "^6.3.1",
-        "express-session": "1.17.0",
-        "http-auth": "^3.2.4",
-        "mongoose": "^5.9.4",
-        "pug": "^2.0.4"
-      },
-      "devDependencies": {
-        "nodemon": "^2.0.2"
-      }
+        "body-parser": "1.19.0",
+        "crypto-js": "4.0.0",
+        "ejs": "^2.7.4",
+        "express": "4.17.1",
+        "jquery": "^3.4.1",
+        "rainbow-node-sdk": "1.67.1",
+        "mongodb": "3.5.4",
+        "express-session": "1.17.0"
+    }
 }
