--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "express-validator": "^6.3.1",
         "http-auth": "^3.2.4",
         "mongoose": "^5.9.4",
-        "pug": "^2.0.4"
+        "pug": "^2.0.4",
+        "express-rate-limit": "5.1.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.2"
