--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-    "name": "esc-rainbow-alpha",
-    "main": "app.js",
-    "dependencies": {
-        "body-parser": "1.19.0",
-        "crypto-js": "4.0.0",
-        "ejs": "^2.7.4",
-        "express": "4.17.1",
-        "express-session": "1.17.0",
-        "jquery": "^3.4.1",
-        "mongodb": "3.5.4",
-        "rainbow-node-sdk": "1.67.1",
-        "rainbow-web-sdk": "1.67.0",
-        "bcrypt": "^4.0.1",
-        "dotenv": "^8.2.0",
-        "express-validator": "^6.3.1",
-        "http-auth": "^3.2.4",
-        "mongoose": "^5.9.4",
-        "pug": "^2.0.4",
-        "express-rate-limit": "5.1.1",
-        "@joeattardi/emoji-button": "2.12.1"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.2"
-    }
+  "name": "esc-rainbow-alpha",
+  "main": "app.js",
+  "dependencies": {
+    "body-parser": "1.19.0",
+    "crypto-js": "4.0.0",
+    "ejs": "^2.7.4",
+    "express": "4.17.1",
+    "express-session": "1.17.0",
+    "jquery": "^3.4.1",
+    "mongodb": "3.5.4",
+    "rainbow-node-sdk": "1.67.1",
+    "rainbow-web-sdk": "1.67.0",
+    "bcrypt": "^4.0.1",
+    "dotenv": "^8.2.0",
+    "express-validator": "^6.3.1",
+    "http-auth": "^3.2.4",
+    "mongoose": "^5.9.4",
+    "pug": "^2.0.4",
+    "express-rate-limit": "5.1.1",
+    "@joeattardi/emoji-button": "2.12.1"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "collectCoverage": true 
+  }
 }
