--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "esc-rainbow-alpha",
     "main": "app.js",
     "dependencies": {
+        "cookie-parser": "1.4.5",
         "body-parser": "1.19.0",
         "crypto-js": "4.0.0",
+        "simple-crypto-js": "2.2.0",
         "ejs": "^2.7.4",
         "express": "4.17.1",
         "express-session": "1.17.0",
