--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "babel-cli": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "jest": "^25.2.0",
+        "mock-socket": "^9.0.3",
         "nodemon": "^2.0.2",
         "superagent": "^5.2.2",
         "supertest": "^4.0.2"
