--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ coverage/
 jest.config.js
 # ignore node/grunt dependency directories
 node_modules/
+/node_modules
+npm-debug.log
+/*.env
 package-lock.json
 # ignore composer vendor directory
 /vendor
