--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "esc-rainbow-alpha",
-    "main": "app.js",
+    "version": "1.0.0",
+    "description": "Alpha Holding Inc. Chat System Demo App",
+    "main": "server.js",
     "dependencies": {
         "@joeattardi/emoji-button": "2.12.1",
         "@shelf/jest-mongodb": "^1.1.5",
@@ -20,7 +22,7 @@
         "mongoose": "^5.9.4",
         "pug": "^2.0.4",
         "rainbow-node-sdk": "1.67.1",
-        "rainbow-web-sdk": "1.67.0",
+        "rainbow-web-sdk": "^1.69.0",
         "simple-crypto-js": "2.2.0"
     },
     "devDependencies": {
@@ -38,5 +40,14 @@
     "jest": {
         "collectCoverage": true,
         "preset": "@shelf/jest-mongodb"
+    },
+    "keywords": [
+        "heroku",
+        "example"
+    ],
+    "author": "SUTDC1G9 ESC",
+    "license": "MIT",
+    "engines": {
+        "node": "12.14.1"
     }
 }
