--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
         "compression": "^1.7.4"
     },
     "devDependencies": {
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
         "babel-cli": "^6.26.0",
+        "babel-jest": "^25.3.0",
         "babel-preset-env": "^1.7.0",
         "jest": "^25.2.0",
         "mock-socket": "^9.0.3",
