--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ node_modules/
 /node_modules
 npm-debug.log
 /*.env
+/venv
+venv/
+.vscode
 package-lock.json
 # ignore composer vendor directory
 /vendor
