--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
-coverage/
 jest.config.js
+coverage
+/coverage.data
+/coverage/
 # ignore node/grunt dependency directories
 sslcert/
 /sslcert
